discussion/kv_engine/130419/130419_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP MB-39815: Migrate DurabilityCompletionTask to folly Executors

Change-Id: Ia70a68f4d1551a3407c8bdbb56e91eb5f5f995e2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-09-20 10:07:58.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-20 10:23:15.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12590/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability_timeout_task.h:78:70: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
    void updateNextExpiryTime(std::chrono::steady_clock::time_point) override;
                                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:93:18: note: hidden overloaded virtual function "SyncWriteNextExpiryIface::updateNextExpiryTime" declared here: type mismatch at 1st parameter ("int" vs "std::chrono::steady_clock::time_point" (aka "time_point<std::chrono::_V2::steady_clock, duration<long, ratio<1, 1000000000> > >"))
    virtual void updateNextExpiryTime(std::chrono::steady_clock::time_point){};
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:90:13: warning: use "= default" to define a trivial destructor [modernize-use-equals-default]
    virtual ~SyncWriteNextExpiryIface(){};
            ^                          ~~
                                       = default;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_types.h:93:44: error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
    virtual void updateNextExpiryTime(std::chrono::steady_clock::time_point){};
                                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12590/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/durability_timeout_task.h:78:70:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12590/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11381/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
